<resources>
    <string name="app_name">Notes app</string>
    <string name="hello_msg">Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="sort_max">Sort max</string>
    <string name="sort_min">Sort min</string>
    <string name="add_note">New note</string>
    <string name="edit_note">Edit</string>
    <string name="delete_note">Delete</string>
    <string name="title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="top_important">top important</string>
    <string name="mid_important">middle important</string>
    <string name="low_important">low important</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_data">text</string>
    <string name="time_now">time_now</string>
    <string name="importance">importance</string>
    <string name="languages_submenu">Languages</string>
    <string name="eng_submenu">English</string>
    <string name="ua_submenu">Ukranian</string>
    <string name="search">Search</string>
    <string name="themes">Themes</string>
    <string name="orange_theme">Orange</string>
    <string name="green_theme">Green</string>
    <string name="font_size">Font size</string>
</resources>
