<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     


<EditText
    android:id="@+id/title_edit"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:inputType="textMultiLine"
    android:hint="@string/title_hint"
    android:lines="1"
    android:minLines="1"
    android:maxLines="1"
    android:gravity="top"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/note_edit"
/>

<EditText
    android:id="@+id/note_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:lines="4"
    android:minLines="4"
    android:maxLines="4"
    android:gravity="top"
    android:hint="@string/note_hint"
    app:layout_constraintTop_toBottomOf="@+id/title_edit"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/edit_note"
        android:onClick="editMessage"
        app:layout_constraintTop_toTopOf="@+id/note_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
